--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -25,9 +25,35 @@
         </li>
       </ul>
     </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>Summary: Latitude vs. X</h2>
+        <hr />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae tincidunt nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est viverra eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui mauris, sed sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa consequat varius sit amet sit amet diam.<br></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae tincidunt nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est viverra eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui mauris, sed sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa consequat varius sit amet sit amet diam.</p>
+        <img src="visualizations/MaxTempVsLat.png" alt="A scatter plot of maximum temeratures versus latitude"/>
+      </div>
+      <div class="row col-md-4">
+        <h2>Visualizations</h2>
+        <hr />
+        <div class="row-col-md-2">
+          <img src="visualizations/MaxTempVsLat.png" alt="A scatter plot of maximum temeratures versus latitude"/>
+          <img src="visualizations/HumidityVsLat.png" alt="A scatter plot of humidty versus latitude"/>
+        </div>
+        <div class="row-col-md-2">
+          <img src="visualizations/CloudsVsLat.png" alt="A scatter plot of cloudiness versus latitude"/>
+          <img src="visualizations/WindVsLat.png" alt="A scatter plot of windiness versus latitude"/>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
