--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -4,66 +4,76 @@
 <head>
   <meta charset="UTF-8">
   <title>Latitude Analysis Dashboard</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 
+  <div class="container">
+    <div class="row">
+      <div class="col-9">
+        <a href="index.html" class="btn btn-primary btn-lg disabled" role="button" aria-disabled="true">Latitude</a>
+      </div>
+      <div class="col-3">
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="plot.thml">Plot</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="comparison.html">Comparison</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="data.html">Data</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </head>
 
 <body>
-  <div class="container">
-    <div class="row">
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Plots</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Comparison</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Data</a>
-        </li>
-      </ul>
-    </div>
-  </div>
+
 
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <h2>Summary: Latitude vs. X</h2>
-        <hr />
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae tincidunt
-          nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est viverra
-          eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui mauris, sed
-          sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa consequat varius
-          sit amet sit amet diam.<br></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae tincidunt
-          nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est viverra
-          eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui mauris, sed
-          sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa consequat varius
-          sit amet sit amet diam.</p>
-        <img src="visualizations/MaxTempVsLat.png" alt="A scatter plot of maximum temeratures versus latitude" />
+        <div class="box">
+          <h2>Summary: Latitude vs. X</h2>
+          <hr />
+          <img src="visualizations/MaxTempVsLat.png" alt="A scatter plot of maximum temeratures versus latitude"
+            align="left" />
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae tincidunt
+            nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est viverra
+            eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui mauris, sed
+            sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa consequat
+            varius
+            sit amet sit amet diam.<br></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae tincidunt
+            nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est viverra
+            eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui mauris, sed
+            sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa consequat
+            varius
+            sit amet sit amet diam.</p>
+        </div>
       </div>
       <div class="row col-md-4">
-        <h2>Visualizations</h2>
-        <hr />
-        <div class="row-col-md-2">
-          <img src="visualizations/MaxTempVsLat.png" alt="A scatter plot of maximum temeratures versus latitude" />
-          <img src="visualizations/HumidityVsLat.png" alt="A scatter plot of humidty versus latitude" />
-        </div>
-        <div class="row-col-md-2">
-          <img src="visualizations/CloudsVsLat.png" alt="A scatter plot of cloudiness versus latitude" />
-          <img src="visualizations/WindVsLat.png" alt="A scatter plot of windiness versus latitude" />
+        <div class="box">
+          <h2>Visualizations</h2>
+          <hr />
+          <div class="row-col-md-2">
+            <img src="visualizations/MaxTempVsLat.png" alt="A scatter plot of maximum temeratures versus latitude"
+              width="160" height="160" />
+            <img src="visualizations/HumidityVsLat.png" alt="A scatter plot of humidty versus latitude" width="160"
+              height="160" />
+            <img src="visualizations/CloudsVsLat.png" alt="A scatter plot of cloudiness versus latitude" width="160"
+              height="160" />
+            <img src="visualizations/WindVsLat.png" alt="A scatter plot of windiness versus latitude" width="160"
+              height="160" />
+          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
