Add navbar to all pages

--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -10,16 +10,16 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-9">
-        <a href="index.html" class="btn btn-primary btn-lg disabled" role="button" aria-disabled="true">Latitude</a>
+      <div class="col-8">
+        <a href="index.html" class="btn btn-primary btn-lg disabled" role="button" aria-disabled="true">Latitude Analysis Dashboard</a>
       </div>
-      <div class="col-3">
+      <div class="col-4">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link active" href="plot.thml">Plot</a>
+            <a class="nav-link active" href="plot.html">Plots</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="comparison.html">Comparison</a>
+            <a class="nav-link" href="comparisions.html">Comparisons</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="data.html">Data</a>
