--- a/WebVisualizations/LatVsCloudiness.html
+++ b/WebVisualizations/LatVsCloudiness.html
@@ -3,10 +3,32 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Cloudiness</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <title>Latitude vs Cloudiness</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
+    <div class="container">
+        <div class="row">
+            <div class="col-8">
+                <a href="index.html" class="btn btn-primary btn-lg disabled" role="button" aria-disabled="true">Latitude
+                    Analysis Dashboard</a>
+            </div>
+            <div class="col-4">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="plot.html">Plots</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="comparisions.html">Comparisons</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="data.html">Data</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </head>
 
 <body>
