Work on dropdown for navbar.

--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -17,7 +17,7 @@
       <div class="col-4">
         <ul class="nav nav-pills">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="index.html" role="button"
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
               aria-haspopup="true" aria-expanded="false">Plots</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="LatVsMaxTemp.html">Max Temp</a>
