Work on navbar.

--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -11,29 +11,33 @@
   <div class="container">
     <div class="row">
       <div class="col-8">
-        <a href="index.html" class="btn btn-primary btn-lg disabled" role="button" aria-disabled="true">Latitude
-          Analysis Dashboard</a>
-      </div>
-      <div class="col-4">
         <ul class="nav nav-pills">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-              aria-haspopup="true" aria-expanded="false">Plots</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="LatVsMaxTemp.html">Max Temp</a>
-              <a class="dropdown-item" href="LatVsHumidity.html">Humidity</a>
-              <a class="dropdown-item" href="LatVsCloudiness.html">Cloudiness</a>
-              <a class="dropdown-item" href="LatVsWindiness.html">Windiness</a>
-            </div>
-          </li>
           <li class="nav-item">
-            <a class="nav-link" href="comparisions.html">Comparisons</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="data.html">Data</a>
+            <a href="index.html" class="btn btn-primary btn-lg" role="button" aria-pressed="true">Latitude
+              Analysis Dashboard</a>
           </li>
         </ul>
       </div>
+    </div>
+    <div class="col-4">
+      <ul class="nav nav-pills">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+            aria-expanded="false">Plots</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="LatVsMaxTemp.html">Max Temp</a>
+            <a class="dropdown-item" href="LatVsHumidity.html">Humidity</a>
+            <a class="dropdown-item" href="LatVsCloudiness.html">Cloudiness</a>
+            <a class="dropdown-item" href="LatVsWindiness.html">Windiness</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="comparisions.html">Comparisions</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="data.html">Data</a>
+        </li>
+      </ul>
     </div>
   </div>
 </head>
