--- a/WebVisualizations/comparisions.html
+++ b/WebVisualizations/comparisions.html
@@ -34,14 +34,40 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
-                <img src="visualizations/MaxTempVsLat.png"
-                    alt="A scatter plot of maximum temeratures versus latitude" />
-                <img src="visualizations/HumidityVsLat.png" alt="A scatter plot of humidty versus latitude" />
-            </div>
-            <div class="row-col-md-6">
-                <img src="visualizations/CloudsVsLat.png" alt="A scatter plot of cloudiness versus latitude" />
-                <img src="visualizations/WindVsLat.png" alt="A scatter plot of windiness versus latitude" />
+            <div class="col-md-12">
+                <div class="box">
+                    <h2>Comparision: Latitude vs. X</h2>
+                    <hr />
+                    <p>Click any plot for an in-depth analysis.</p>
+
+                    <h3>vs. Max Temperature</h3>
+                    <a href="LatVsMaxTemp.html">
+                        <img src="visualizations/MaxTempVsLat.png"
+                            alt="A scatter plot of maximum temeratures versus latitude" width="300" height="300" />
+                    </a>
+
+
+                    <h3>vs. Humidity</h3>
+                    <a href="LatVsHumidity.html">
+                        <img src="visualizations/HumidityVsLat.png" alt="A scatter plot of humidty versus latitude"
+                            width="300" height="300" />
+                    </a>
+
+
+                    <h3>vs. Cloudiness</h3>
+                    <a href="LatVsCloudiness.html">
+                        <img src="visualizations/CloudsVsLat.png" alt="A scatter plot of cloudiness versus latitude"
+                            width="300" height="300" />
+                    </a>
+
+
+                    <h3>.vs Wind Speed</h3>
+                    <a href="LatVsWindiness.html">
+                        <img src="visualizations/WindVsLat.png" alt="A scatter plot of windiness versus latitude"
+                            width="300" height="300" />
+                    </a>
+
+                </div>
             </div>
         </div>
     </div>
