--- a/WebVisualizations/LatVsMaxTemp.html
+++ b/WebVisualizations/LatVsMaxTemp.html
@@ -35,31 +35,55 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8">
-                <h2>Summary: Latitude vs. Maximum Temperature</h2>
-                <hr />
-                <img src="visualizations/MaxTempVsLat.png"
-                    alt="A scatter plot of maximum temeratures versus latitude" />
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
-                    tincidunt
-                    nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est
-                    viverra
-                    eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui mauris,
-                    sed
-                    sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa
-                    consequat
-                    varius
-                    sit amet sit amet diam.<br></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
-                    tincidunt
-                    nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est
-                    viverra
-                    eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui mauris,
-                    sed
-                    sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa
-                    consequat
-                    varius
-                    sit amet sit amet diam.</p>
+                <div class="box">
+                    <h2>Maximum Temperature</h2>
+                    <hr />
+                    <img src="visualizations/MaxTempVsLat.png" alt="A scatter plot of maximum temeratures versus latitude" />
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
+                        tincidunt
+                        nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est
+                        viverra
+                        eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui mauris,
+                        sed
+                        sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa
+                        consequat
+                        varius
+                        sit amet sit amet diam.<br></p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
+                        tincidunt
+                        nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est
+                        viverra
+                        eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui mauris,
+                        sed
+                        sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa
+                        consequat
+                        varius
+                        sit amet sit amet diam.</p>
+                </div>
             </div>
+            <div class="row col-md-4">
+                <div class="box">
+                    <h2>Visualizations</h2>
+                    <hr />
+                    <div class="row-col-md-2">
+                        <a href="LatVsMaxTemp.html">
+                            <img src="visualizations/MaxTempVsLat.png" alt="A scatter plot of maximum temeratures versus latitude"
+                                width="160" height="160" />
+                        </a>
+                        <a href="LatVsHumidity.html">
+                            <img src="visualizations/HumidityVsLat.png" alt="A scatter plot of humidty versus latitude" width="160"
+                                height="160" />
+                        </a>
+                        <a href="LatVsCloudiness.html">
+                            <img src="visualizations/CloudsVsLat.png" alt="A scatter plot of cloudiness versus latitude" width="160"
+                                height="160" />
+                        </a>
+                        <a href="LatVsWindiness.html">
+                            <img src="visualizations/WindVsLat.png" alt="A scatter plot of windiness versus latitude" width="160"
+                                height="160" />
+                        </a>
+                    </div>
+                </div>
         </div>
     </div>
 
