--- a/WebVisualizations/data.html
+++ b/WebVisualizations/data.html
@@ -27,3 +27,18 @@
         </div>
     </div>
 </head>
+
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="box">
+                    <h2>Data</h2>
+                    <hr />
+                    <p>The following table includes all of the data used for plotting during this project.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</body>
