More navbar work.

--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -10,36 +10,40 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-8">
-        <ul class="nav nav-pills">
-          <li class="nav-item">
-            <a href="index.html" class="btn btn-primary btn-lg" role="button" aria-pressed="true">Latitude
-              Analysis Dashboard</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-4">
-      <ul class="nav nav-pills">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-            aria-expanded="false">Plots</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="LatVsMaxTemp.html">Max Temp</a>
-            <a class="dropdown-item" href="LatVsHumidity.html">Humidity</a>
-            <a class="dropdown-item" href="LatVsCloudiness.html">Cloudiness</a>
-            <a class="dropdown-item" href="LatVsWindiness.html">Windiness</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="comparisions.html">Comparisions</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="data.html">Data</a>
-        </li>
-      </ul>
-    </div>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">Latitude Analysis Dashboard</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                Plots
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="LatVsMaxTemp.html">Max Temp</a>
+                <a class="dropdown-item" href="LatVsHumidity.html">Humidity</a>
+                <a class="dropdown-item" href="LatVsCloudiness.html">Cloudiness</a>
+                <a class="dropdown-item" href="LatVsWindiness.html">Windiness</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="comparisions.html">Comparisions</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="data.html">Data</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
   </div>
+  
 </head>
 
 <body>
