Made plot images responsive.

--- a/WebVisualizations/LatVsCloudiness.html
+++ b/WebVisualizations/LatVsCloudiness.html
@@ -52,7 +52,7 @@
                 <div class="box">
                     <h2>Cloudiness</h2>
                     <hr />
-                    <img src="visualizations/CloudsVsLat.png" alt="A scatter plot of cloudiness versus latitude" />
+                    <img src="visualizations/CloudsVsLat.png" alt="A scatter plot of cloudiness versus latitude" id = "responsive_img"/>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
                         tincidunt
                         nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non
