--- a/WebVisualizations/LatVsWindiness.html
+++ b/WebVisualizations/LatVsWindiness.html
@@ -52,7 +52,7 @@
                 <div class="box">
                     <h2>Wind Speeds</h2>
                     <hr />
-                    <img src="visualizations/WindVsLat.png" alt="A scatter plot of windiness versus latitude" />
+                    <img src="visualizations/WindVsLat.png" alt="A scatter plot of windiness versus latitude" id = "responsive_img" />
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
                         tincidunt
                         nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est
