--- a/WebVisualizations/LatVsHumidity.html
+++ b/WebVisualizations/LatVsHumidity.html
@@ -52,7 +52,7 @@
                 <div class="box">
                     <h2>Humidity</h2>
                     <hr />
-                    <img src="visualizations/HumidityVsLat.png" alt="A scatter plot of humidty versus latitude" />
+                    <img src="visualizations/HumidityVsLat.png" alt="A scatter plot of humidty versus latitude" id = "responsive_img"/>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
                         tincidunt
                         nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non
