Add explanation of the project to home page.

--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -54,18 +54,15 @@
           <hr />
           <img src="visualizations/MaxTempVsLat.png" alt="A scatter plot of maximum temeratures versus latitude"
             align="left" />
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae tincidunt
-            nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est viverra
-            eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui mauris, sed
-            sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa consequat
-            varius
-            sit amet sit amet diam.<br></p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae tincidunt
-            nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est viverra
-            eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui mauris, sed
-            sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa consequat
-            varius
-            sit amet sit amet diam.</p>
+          <p>The purpose of this project was to explore any potential weather trends or correlations as one moves closer
+            to the equator. This was accomplished by randomly selecting over 500 cities and towns throughout the globe
+            and making an OpenWeather api call for each of those cities. In particular, data for analysis was gathered
+            on each city's temperature, humidity, cloudiness, and wind speed. Once the data was gathered, it was
+            organized into a dataframe by using the Pandas library so that it could be analyzed for trends or
+            correlations. Using Matplotlib, the data was then both visualized and analyzed.<br></p>
+          <p>This site provides both the analysis and visualizations created for this project. Each visualization
+            includes a brief discription of findings. Additionally, there is a comparisons page to look at all four
+            visualizations. Finally, the data collected for this project is available in a table.</p>
         </div>
       </div>
       <div class="row col-md-4">
