Add analysis for individual vvisualizations.

--- a/WebVisualizations/LatVsCloudiness.html
+++ b/WebVisualizations/LatVsCloudiness.html
@@ -52,31 +52,13 @@
                 <div class="box">
                     <h2>Cloudiness</h2>
                     <hr />
-                    <img src="visualizations/CloudsVsLat.png" alt="A scatter plot of cloudiness versus latitude" id = "responsive_img"/>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
-                        tincidunt
-                        nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non
-                        est
-                        viverra
-                        eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui
-                        mauris,
-                        sed
-                        sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa
-                        consequat
-                        varius
-                        sit amet sit amet diam.<br></p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
-                        tincidunt
-                        nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non
-                        est
-                        viverra
-                        eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui
-                        mauris,
-                        sed
-                        sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa
-                        consequat
-                        varius
-                        sit amet sit amet diam.</p>
+                    <img src="visualizations/CloudsVsLat.png" alt="A scatter plot of cloudiness versus latitude"
+                        id="responsive_img" />
+                    <p>Based on the data collected, there does not appear to be any relationship between a city's
+                        proximity to the equator and how cloudy the skies over that city are. As the visualization
+                        demonstrates, cloud coverage varies greatly among cities with the same latitude. This would
+                        indicate factors other than latitude are likely more predictive of a
+                        city's cloud coverage.</p>
                 </div>
             </div>
             <div class="row col-md-4">
@@ -104,15 +86,15 @@
                 </div>
             </div>
         </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
