--- a/WebVisualizations/LatVsHumidity.html
+++ b/WebVisualizations/LatVsHumidity.html
@@ -52,31 +52,13 @@
                 <div class="box">
                     <h2>Humidity</h2>
                     <hr />
-                    <img src="visualizations/HumidityVsLat.png" alt="A scatter plot of humidty versus latitude" id = "responsive_img"/>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
-                        tincidunt
-                        nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non
-                        est
-                        viverra
-                        eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui
-                        mauris,
-                        sed
-                        sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa
-                        consequat
-                        varius
-                        sit amet sit amet diam.<br></p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
-                        tincidunt
-                        nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non
-                        est
-                        viverra
-                        eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui
-                        mauris,
-                        sed
-                        sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa
-                        consequat
-                        varius
-                        sit amet sit amet diam.</p>
+                    <img src="visualizations/HumidityVsLat.png" alt="A scatter plot of humidty versus latitude"
+                        id="responsive_img" />
+                    <p>Based on the data collected, there does not appear to be any relationship between a city's
+                        proximity to the equator and how humid that city is. As the visualization demonstrates, the
+                        humidy can vary greatly among cities with the same latitude--sometimes from 0% humidity up to
+                        100% humidity. This would indicate factors other than latitude are likely more predictive of a
+                        city's humidity.</p>
                 </div>
             </div>
             <div class="row col-md-4">
