--- a/WebVisualizations/LatVsMaxTemp.html
+++ b/WebVisualizations/LatVsMaxTemp.html
@@ -53,31 +53,13 @@
                     <h2>Maximum Temperature</h2>
                     <hr />
                     <img src="visualizations/MaxTempVsLat.png"
-                        alt="A scatter plot of maximum temeratures versus latitude" id = "responsive_img" />
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
-                        tincidunt
-                        nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non
-                        est
-                        viverra
-                        eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui
-                        mauris,
-                        sed
-                        sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa
-                        consequat
-                        varius
-                        sit amet sit amet diam.<br></p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
-                        tincidunt
-                        nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non
-                        est
-                        viverra
-                        eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui
-                        mauris,
-                        sed
-                        sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa
-                        consequat
-                        varius
-                        sit amet sit amet diam.</p>
+                        alt="A scatter plot of maximum temeratures versus latitude" id="responsive_img" />
+                    <p>The strongest trend in the entire dataset is that a city's proximity to the equator impacts its
+                        maximum temperature (at least on the day data was gathered). As expected, the closer a city is
+                        to the equator (0 degrees latitude), the higher the maximum temperature. However, as the
+                        visualization demonstrates, the warmest cities were actually in the range of 20-40 degrees
+                        latitude instead of being nearest the equator. This trend could be due to the time of day or
+                        month of year the data was gathered.</p>
                 </div>
             </div>
             <div class="row col-md-4">
@@ -106,15 +88,15 @@
             </div>
         </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
