--- a/WebVisualizations/LatVsWindiness.html
+++ b/WebVisualizations/LatVsWindiness.html
@@ -52,27 +52,13 @@
                 <div class="box">
                     <h2>Wind Speeds</h2>
                     <hr />
-                    <img src="visualizations/WindVsLat.png" alt="A scatter plot of windiness versus latitude" id = "responsive_img" />
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
-                        tincidunt
-                        nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est
-                        viverra
-                        eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui mauris,
-                        sed
-                        sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa
-                        consequat
-                        varius
-                        sit amet sit amet diam.<br></p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula tellus arcu, vitae
-                        tincidunt
-                        nisi molestie ac. Praesent efficitur hendrerit massa sit amet tempor. Sed vestibulum tellus non est
-                        viverra
-                        eleifend. Cras sem sem, porttitor vitae lacinia ac, eleifend ut ante. Maecenas ultricies dui mauris,
-                        sed
-                        sodales ante scelerisque ac. Vestibulum luctus rutrum condimentum. Mauris non lacus id massa
-                        consequat
-                        varius
-                        sit amet sit amet diam.</p>
+                    <img src="visualizations/WindVsLat.png" alt="A scatter plot of windiness versus latitude"
+                        id="responsive_img" />
+                    <p>Based on the data collected, there does not appear to be any relationship between a city's
+                        proximity to the equator and wind speeds. As the visualization demonstrates, wind speeds are
+                        fairly consistent at all latitudes. While there appears to be two outliers of greater wind speeds (between 0 and 20
+                        degrees latitude), they are just that: outliers. This would indicate factors other than latitude are likely more predictive of a
+                        city's wind speed.</p>
                 </div>
             </div>
             <div class="row col-md-4">
@@ -81,20 +67,20 @@
                     <hr />
                     <div class="row-col-md-2">
                         <a href="LatVsMaxTemp.html">
-                            <img src="visualizations/MaxTempVsLat.png" alt="A scatter plot of maximum temeratures versus latitude"
-                                width="160" height="160" />
+                            <img src="visualizations/MaxTempVsLat.png"
+                                alt="A scatter plot of maximum temeratures versus latitude" width="160" height="160" />
                         </a>
                         <a href="LatVsHumidity.html">
-                            <img src="visualizations/HumidityVsLat.png" alt="A scatter plot of humidty versus latitude" width="160"
-                                height="160" />
+                            <img src="visualizations/HumidityVsLat.png" alt="A scatter plot of humidty versus latitude"
+                                width="160" height="160" />
                         </a>
                         <a href="LatVsCloudiness.html">
-                            <img src="visualizations/CloudsVsLat.png" alt="A scatter plot of cloudiness versus latitude" width="160"
-                                height="160" />
+                            <img src="visualizations/CloudsVsLat.png" alt="A scatter plot of cloudiness versus latitude"
+                                width="160" height="160" />
                         </a>
                         <a href="LatVsWindiness.html">
-                            <img src="visualizations/WindVsLat.png" alt="A scatter plot of windiness versus latitude" width="160"
-                                height="160" />
+                            <img src="visualizations/WindVsLat.png" alt="A scatter plot of windiness versus latitude"
+                                width="160" height="160" />
                         </a>
                     </div>
                 </div>
